@@ -41,7 +41,7 @@ public class FulfilledValueFunctionTest {
     @Mock
     private Promise<Integer> promise;
 
-    private Integer promiseVal = new Integer(200);
+    private Integer promiseVal = Integer.valueOf(200);
 
     @Before
     public void setUp() {
